maked the location an object and added it to the code
