# docs/swagger.json
@@ -15,11 +15,9 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.TaskDTO"
+                            "$ref": "#/definitions/model.Task"
                         }
                     }
-<<<<<<< HEAD
-=======
                 ],
                 "responses": {
                     "200": {
@@ -28,7 +26,6 @@
                             "$ref": "#/definitions/model.TaskDTO"
                         }
                     }
->>>>>>> 9fc1e708993d35653c9863117ecdc3285b3b59ff
                 }
             }
         },
@@ -71,7 +68,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.TaskDTO"
+                            "$ref": "#/definitions/model.Task"
                         }
                     }
                 ],
@@ -202,6 +199,60 @@
                 }
             }
         },
+        "model.Location": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "lat": {
+                    "type": "number"
+                },
+                "longtitude": {
+                    "type": "number"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.Task": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "endTime": {
+                    "type": "string"
+                },
+                "groupId": {
+                    "type": "integer"
+                },
+                "location": {
+                    "description": "has to be object",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/model.Location"
+                        }
+                    ]
+                },
+                "name": {
+                    "type": "string"
+                },
+                "startTime": {
+                    "type": "string"
+                }
+            }
+        },
         "model.TaskDTO": {
             "type": "object",
             "properties": {
@@ -221,7 +272,12 @@
                     "type": "integer"
                 },
                 "location": {
-                    "type": "string"
+                    "description": "has to be object",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/model.Location"
+                        }
+                    ]
                 },
                 "name": {
                     "type": "string"
